--- a/TP2/Makefile
+++ b/TP2/Makefile
@@ -4,15 +4,15 @@ CX_FLAGS = -Wall -Wextra -ansi -pedantic -I./include -I./src
 
 all: main
 
-main: main.o matrix.o lchaine.o
-	$(CC) ./obj/main.o ./obj/matrix.o ./obj/lchaine.o -o ./bin/main_program $(LD_FLAGS)
+main: main.o stack.o queue.o
+	$(CC) ./obj/main.o ./obj/queue.o ./obj/stack.o -o ./bin/main_program $(LD_FLAGS)
 
-main.o: ./src/ZZ_TP1_main.c ./include/ZZ_matrix.h
-	$(CC) -c ./src/ZZ_TP1_main.c -o ./obj/main.o $(CX_FLAGS) 
+main.o: ./src/main.c ./include/ZZ_queue.h ./include/ZZ_stack.h
+	$(CC) -c ./src/main.c -o ./obj/main.o $(CX_FLAGS) 
 
-matrix.o: ./src/ZZ_matrix.c ./include/ZZ_matrix.h
-	$(CC) -c ./src/ZZ_matrix.c -o ./obj/matrix.o $(CX_FLAGS) 
+stack.o: ./src/ZZ_stack.c ./include/ZZ_stack.h
+	$(CC) -c ./src/ZZ_stack.c -o ./obj/stack.o $(CX_FLAGS) 
 
-lchaine.o: ./src/ZZ_Liste_chainee.c ./include/ZZ_Liste_chainee.h
-	$(CC) -c ./src/ZZ_Liste_chainee.c -o ./obj/lchaine.o $(CX_FLAGS) 
+queue.o: ./src/ZZ_queue.c ./include/ZZ_queue.h
+	$(CC) -c ./src/ZZ_queue.c -o ./obj/queue.o $(CX_FLAGS) 
 	
